resiliency/service/service-envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "service",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/service",
                      "cluster": "service1"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "name": "fault",
                "config":
                {
                  "abort":
                  {
                    "abort_percent": 25,
                    "http_status": 501
                  },
                  "upstream_cluster":"service1"
                }
              },
              {
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/tmp/envoy-admin",
    "address": "tcp://0.0.0.0:8001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "service1",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:8080"
          }
        ],
        "circuit_breakers": {
          "default": {
            "max_connections": 1,
            "max_pending_requests": 1,
            "max_retries": 3
          }
        }
      }
    ]
  }
}
